tests/snapshots/generator__advanced_create_files@_bytes_1000_exact_1_0_1000.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 0 where each directory contains approximately 0 other directories. Each file will contain approximately 1,000 bytes of random data totaling exactly 1000 bytes.
Created 2 files (1.0 kB) across 0 directories.

/0
/1

0xfdffe93d779c5cae
